--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -448,4 +448,11 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="TextLabel" parent="Widget.Design.TextInputLayout">
+        <!-- Hint color and label color in FALSE state -->
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorControlNormal">#f0f0f0</item>
+        <item name="colorControlActivated">#f0f0f0</item>
+    </style>
+
 </resources>
