--- a/trunk/ddscanner/app/src/main/res/layout/view_base_text_input.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_base_text_input.xml
@@ -5,7 +5,8 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_input_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/TextLabel">
         <EditText
             android:id="@+id/edit_text"
             android:layout_width="match_parent"
