--- a/trunk/ddscanner/app/src/main/res/values/attrs.xml
+++ b/trunk/ddscanner/app/src/main/res/values/attrs.xml
@@ -22,6 +22,7 @@
     <declare-styleable name="BaseTextInput">
         <attr name="edit_text_hint" format="string" />
         <attr name="edit_text_text" format="string" />
+        <attr name="edit_text_length" format="integer" />
     </declare-styleable>
 
     <declare-styleable name="ContentBlockLinearLayout">
