--- a/trunk/ddscanner/app/src/main/res/layout/item_tag.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_tag.xml
@@ -9,6 +9,7 @@
         android:paddingVertical="2dp"
         android:paddingHorizontal="6dp"
         android:id="@+id/text"
+        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
