--- a/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -47,7 +48,7 @@
                 android:orientation="vertical"
                 android:visibility="visible">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
@@ -55,28 +56,62 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/avatar"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
-                        android:layout_marginBottom="13dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_marginLeft="13dp"
                         android:layout_marginTop="13dp"
                         android:src="@drawable/avatar_dc_profile"
                         app:loadImageFrom="@{diveCenterViewModel}" />
-
+                    <LinearLayout
+                        android:layout_toRightOf="@+id/avatar"
+                        android:layout_centerVertical="true"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="17dp"
+                        android:layout_marginRight="20dp">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="17dp"
-                        android:layout_marginRight="20dp"
                         android:text="@{diveCenterViewModel.diveCenterProfile.name}"
                         android:textColor="@color/black_text"
                         android:textSize="18sp" />
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/type"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="13sp"
+                            android:fontFamily="sans-serif"
+                            android:textStyle="normal"
+                            android:textColor="#a3a3a3"
+                            android:letterSpacing="0.02"
+                            android:lineSpacingExtra="6sp"
+                            tools:text="Dive center / Dive shop"
+                            />
+                    </LinearLayout>
+                </RelativeLayout>
+                <TextView
+                    android:id="@+id/about"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="13sp"
+                    android:fontFamily="sans-serif"
+                    android:textStyle="normal"
+                    android:textColor="#616161"
+                    android:letterSpacing="0.02"
+                    android:lineSpacingExtra="6sp"
+                    android:paddingHorizontal="13dp"
+                    android:background="@color/white"
+                    android:paddingBottom="10dp"
+                    tools:text="Don’t leave your shopping to the last minute. The more time you have to shop around, the you can."
+                    />
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/tags"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingHorizontal="13dp"
+                    android:paddingHorizontal="9dp"
                     android:paddingBottom="13dp"
                     android:background="@color/white"/>
                 <ImageView style="@style/DividerStyleFull" />
@@ -295,6 +330,50 @@
 
                 <ImageView style="@style/DividerStyleFull" />
 
+                <com.ddscanner.ui.views.ContentBlockLinearLayout
+                    android:layout_marginTop="@dimen/base_block_margin_top"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:top_divider="true"
+                    app:bottom_divider="true"
+                    android:visibility="@{diveCenterViewModel.diveCenterProfile.brands != null ? View.VISIBLE : View.GONE}">
+                    <TextView
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="15sp"
+                        android:fontFamily="sans-serif"
+                        android:textStyle="normal"
+                        android:textColor="#313131"
+                        android:text="Brands"
+                        android:layout_marginBottom="2dp"
+                        />
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/brands_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginRight="6dp"
+                        android:layout_marginBottom="15dp"/>
+                    <ImageView style="@style/DividerStyleFull" />
+                    <TextView
+                        android:onClick="@{handlers::showAllBrands}"
+                        android:paddingLeft="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="58dp"
+                        android:textSize="14sp"
+                        android:gravity="center_vertical"
+                        android:fontFamily="sans-serif-medium"
+                        android:textStyle="normal"
+                        android:textColor="#3b528b"
+                        android:letterSpacing="0.02"
+                        tools:text="Show all brands (20)"
+                        app:loadAllBrandsText="@{diveCenterViewModel}"
+                        />
+                </com.ddscanner.ui.views.ContentBlockLinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -418,14 +497,17 @@
                                 android:src="@drawable/ic_arrow" />
                         </RelativeLayout>
                     </LinearLayout>
-
-                    <Button
-                        style="@style/BlueButton"
-                        android:layout_width="match_parent"
-                        android:layout_marginBottom="20dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
+                    <ImageView style="@style/DividerStyleFull" />
+                    <TextView
+                        android:textSize="14sp"
                         android:fontFamily="sans-serif-medium"
+                        android:layout_height="58dp"
+                        android:gravity="center_vertical"
+                        android:paddingHorizontal="20dp"
+                        android:textStyle="normal"
+                        android:textColor="#3b528b"
+                        android:letterSpacing="0.02"
+                        android:layout_width="match_parent"
                         android:onClick="@{handlers::showDiveSpots}"
                         android:textAllCaps="false"
                         android:visibility="gone"
