--- a/trunk/ddscanner/app/src/main/res/layout/activity_main.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_main.xml
@@ -40,25 +40,36 @@
                     android:layout_toRightOf="@+id/toolbar_tablayout"
                     android:animateLayoutChanges="true"
                     app:layout_widthPercent="40%">
-
-                    <ImageView
+                    <RelativeLayout
                         android:id="@+id/filter_menu_button"
-                        android:layout_width="wrap_content"
+                        app:layout_widthPercent="50%"
                         android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:gravity="center">
+                    <ImageView
+                        android:id="@+id/icon_filter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
                         android:scaleType="center"
                         android:src="@drawable/ic_ac_filter"
-                        app:layout_widthPercent="50%" />
-
-                    <ImageView
+                         />
+                    </RelativeLayout>
+                    <RelativeLayout
                         android:id="@+id/search_location_menu_button"
-                        android:layout_width="wrap_content"
+                        app:layout_widthPercent="50%"
                         android:layout_height="match_parent"
-                        android:layout_toRightOf="@+id/filter_menu_button"
+                        android:layout_width="wrap_content"
+                        android:gravity="center"
+                        android:layout_toRightOf="@+id/filter_menu_button">
+                    <ImageView
+                        android:id="@+id/icon_search"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
                         android:scaleType="center"
-                        android:src="@drawable/ic_ac_search"
-                        app:layout_widthPercent="50%" />
+                        android:src="@drawable/ic_ac_search" />
+                    </RelativeLayout>
                 </android.support.percent.PercentRelativeLayout>
 
                 <android.support.percent.PercentRelativeLayout
