--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -657,7 +657,7 @@
                 android:background="@drawable/contact_dive_center_background"
                 android:onClick="@{handlers::showDiveCentersButtonClicked}"
                 android:text="@string/contact_dive_centers"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:visibilityForBookButtonFrom="@{diveSpotViewModel}" />
 
         </RelativeLayout>
