--- a/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
@@ -83,65 +83,19 @@
             android:clickable="true"
             android:visibility="gone" />
 
+        <com.ddscanner.ui.views.DiveCenterInfoView
+            android:id="@+id/dive_center_info_layout"
+            android:layout_width="match_parent"
+            android:layout_height="93dp"
+            android:layout_gravity="bottom"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:visibility="gone" />
+
 
     </android.support.design.widget.CoordinatorLayout>
 
-    <RelativeLayout
-        android:id="@+id/list_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/cv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:scrollbars="vertical"
-            android:visibility="gone" />
-
-        <RelativeLayout
-            android:id="@+id/please"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:visibility="visible">
-
-            <ImageView
-                android:id="@+id/sad"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_nospots" />
-
-            <TextView
-                android:id="@+id/text"
-                style="@style/ErrorsViewTitleStyle"
-                android:layout_below="@+id/sad"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:text="@string/there_are_no_dive_spots_here" />
-
-            <TextView
-                android:id="@+id/subtext"
-                style="@style/ErrorsViewSubTitleStyle"
-                android:layout_below="@+id/text"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:text="@string/please_choose_another_location" />
-
-            <Button
-                android:id="@+id/showMapContinue"
-                style="@style/OrangeButtons"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/subtext"
-                android:layout_marginTop="174dp"
-                android:text="@string/continue_search"
-                android:visibility="visible" />
-        </RelativeLayout>
-    </RelativeLayout>
+   <include layout="@layout/view_map_fragment_list_view" />
 
     <ProgressBar
         android:id="@+id/request_progress"
