--- a/trunk/ddscanner/app/src/main/res/layout/activity_main.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_main.xml
@@ -45,12 +45,13 @@
                         app:layout_widthPercent="50%"
                         android:layout_height="match_parent"
                         android:layout_width="wrap_content"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:background="?attr/selectableItemBackground"
+                        >
                     <ImageView
                         android:id="@+id/icon_filter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
                         android:scaleType="center"
                         android:src="@drawable/ic_ac_filter"
                          />
@@ -61,12 +62,13 @@
                         android:layout_height="match_parent"
                         android:layout_width="wrap_content"
                         android:gravity="center"
-                        android:layout_toRightOf="@+id/filter_menu_button">
+                        android:layout_toRightOf="@+id/filter_menu_button"
+                        android:background="?attr/selectableItemBackground"
+                        >
                     <ImageView
                         android:id="@+id/icon_search"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
                         android:scaleType="center"
                         android:src="@drawable/ic_ac_search" />
                     </RelativeLayout>
@@ -94,7 +96,7 @@
             </android.support.percent.PercentRelativeLayout>
         </RelativeLayout>
 
-        <android.support.v4.view.ViewPager
+        <com.ddscanner.ui.views.NonSwipeableViewPager
             android:id="@+id/main_viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
