--- a/trunk/ddscanner/app/src/main/res/layout/item_divecenter_list_mapfragment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_divecenter_list_mapfragment.xml
@@ -32,6 +32,8 @@
             >
             <TextView
                 android:id="@+id/dc_name"
+                android:lines="1"
+                android:ellipsize="end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
@@ -65,6 +67,8 @@
             android:src="@drawable/ic_pr_location" />
         <TextView
             android:id="@+id/dc_address"
+            android:lines="1"
+            android:ellipsize="end"
             android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
