--- a/trunk/ddscanner/app/src/main/res/layout/view_dive_center_info.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_dive_center_info.xml
@@ -26,15 +26,13 @@
             android:textSize="19sp"
             tools:text="Racha yai wrecks fds fds fds fsdf sdf sd ds" />
 
-        <com.ddscanner.ui.views.RatingView
-            android:id="@+id/rating_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
         <TextView
             android:id="@+id/address"
             android:layout_width="wrap_content"
+            android:lines="1"
+            android:ellipsize="end"
             android:layout_height="wrap_content"
+            android:layout_marginRight="25dp"
             android:layout_marginTop="3dp"
             android:textColor="@color/white"
             android:textSize="14sp"
