+ continue button click listener

--- a/trunk/ddscanner/app/src/main/res/layout/view_map_fragment_list_view.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_map_fragment_list_view.xml
@@ -61,7 +61,7 @@
             android:text="@string/please_choose_another_location" />
 
         <Button
-            android:id="@+id/showMapContinue"
+            android:id="@+id/continue_button"
             style="@style/OrangeButtons"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
