~ now book button visible for dive centers

--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -658,6 +658,7 @@
                 android:onClick="@{handlers::showDiveCentersButtonClicked}"
                 android:text="@string/contact_dive_centers"
                 android:visibility="gone"
+                android:textColor="@color/black_text"
                 app:visibilityForBookButtonFrom="@{diveSpotViewModel}" />
 
         </RelativeLayout>
