~ languages field in die centers list

--- a/trunk/ddscanner/app/src/main/res/layout/item_divecenter_list_mapfragment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_divecenter_list_mapfragment.xml
@@ -11,7 +11,8 @@
         android:paddingHorizontal="18dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="12dp">
     <RelativeLayout
         android:layout_marginTop="16dp"
         android:layout_width="match_parent"
@@ -81,6 +82,7 @@
             />
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/languages_block"
         android:layout_marginTop="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
