--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_center_dive_spots.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_center_dive_spots.xml
@@ -3,5 +3,5 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/view_toolbar" />
-    <include layout="@layout/fragment_maplist" />
+    <include layout="@layout/fragment_mapist_old" />
 </LinearLayout>
