--- a/trunk/ddscanner/app/src/main/res/layout/fragment_dive_center_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_dive_center_profile.xml
@@ -307,7 +307,46 @@
             </LinearLayout>
 
             <ImageView style="@style/DividerStyleFull" />
-
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
+                android:layout_marginTop="@dimen/base_block_margin_top"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:top_divider="true"
+                app:bottom_divider="true"
+                android:paddingHorizontal="16dp"
+                android:visibility="@{diveCenterViewModel.diveCenterProfile.products != null ? View.VISIBLE : View.GONE}">
+                <TextView
+                    android:layout_marginTop="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:fontFamily="sans-serif"
+                    android:textStyle="normal"
+                    android:textColor="#313131"
+                    android:text="Daily tours"
+                    android:layout_marginBottom="2dp"
+                    />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/product_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
+                <ImageView style="@style/DividerStyleFull" />
+                <TextView
+                    android:onClick="@{handlers::showAllProducts}"
+                    android:layout_width="match_parent"
+                    android:layout_height="58dp"
+                    android:textSize="14sp"
+                    android:gravity="center_vertical"
+                    android:fontFamily="sans-serif-medium"
+                    android:textStyle="normal"
+                    android:textColor="#3b528b"
+                    android:letterSpacing="0.02"
+                    tools:text="Show all brands (20)"
+                    app:loadAllProductsText="@{diveCenterViewModel}"
+                    />
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
             <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:layout_marginTop="@dimen/base_block_margin_top"
                 android:layout_width="match_parent"
