--- a/trunk/ddscanner/app/src/main/res/layout/item_daily_tour.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_daily_tour.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:layout_marginTop="12dp"
+        android:layout_marginVertical="6dp"
         android:layout_marginHorizontal="12dp"
         android:foreground="?attr/selectableItemBackground">
         <LinearLayout
@@ -59,6 +59,7 @@
                     android:textStyle="normal"
                     android:textColor="#a3a3a3"
                     android:letterSpacing="0.01"
+                    app:loadDivesCountFrom="@{viewModel.dailyTour.numberOfDives}"
                     tools:text="2 dives, English, Thai"
                     />
             </LinearLayout>
