--- a/trunk/ddscanner/app/src/main/res/layout/activity_divecenter_daily_tours.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_divecenter_daily_tours.xml
@@ -16,7 +16,7 @@
         app:pv_progressStyle="@style/CircularProgress" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/tours_list"
-        android:layout_marginVertical="6dp"
+        android:layout_marginBottom="16dp"
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
