--- a/trunk/ddscanner/app/src/main/res/layout/item_divecenter_profile_product.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_divecenter_profile_product.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:orientation="horizontal"
-    android:layout_marginTop="3dp">
+    android:layout_marginTop="12dp">
 
     <ImageView
         android:id="@+id/product_logo"
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:fontFamily="sans-serif"
-            android:textStyle="normal"
+            android:textStyle="bold"
             android:textColor="#526cae"
             android:letterSpacing="0.02"
             android:gravity="end"
